millora descripcions de camps obligatoris segons tipus a l'operació de registre d'activitat #68
