# rfhab-api-interna/openapi/openapi_interna_secure.json
@@ -94,7 +94,7 @@
         }, {
           "name" : "identificadorCopiaAutentica",
           "in" : "query",
-          "description" : "Identificador de còpia autèntica, podria ser un identificador intern de digitalib o bé el csv de la còpia autèntica",
+          "description" : "Identificador de còpia autèntica, podria ser un identificador intern de digitalib o bé el csv de la còpia autèntica. Obligatori pel tipus d'activitat 1",
           "schema" : {
             "type" : "string"
           },
@@ -102,14 +102,14 @@
         }, {
           "name" : "registre",
           "in" : "query",
-          "description" : "Número de registre associat a l'activitat",
+          "description" : "Número de registre associat a l'activitat. Obligatori pel tipus d'activitat 2",
           "schema" : {
             "type" : "string"
           }
         }, {
           "name" : "idActuacioTramitFh ",
           "in" : "query",
-          "description" : "Identificador associat a l'activitat de tràmit iniciada que es preten marcar com a finalitzada",
+          "description" : "Identificador associat a l'activitat de tràmit iniciada que es preten marcar com a finalitzada. Obligatori pel tipus d'activitat 2",
           "schema" : {
             "type" : "string"
           }
@@ -303,6 +303,106 @@
         "responses" : {
           "200" : {
             "description" : "Operació realitzada correctament",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "400" : {
+            "description" : "Paràmetres incorrectes",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
+            }
+          },
+          "401" : {
+            "description" : "No Autenticat",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "403" : {
+            "description" : "No Autoritzat",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
+          },
+          "500" : {
+            "description" : "Error no controlat",
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/RestExceptionInfo"
+                }
+              }
+            }
+          }
+        },
+        "security" : [ {
+          "BasicAuth" : [ ]
+        } ]
+      }
+    },
+    "/secure/funcionari/nou" : {
+      "post" : {
+        "tags" : [ "FuncionariRestService" ],
+        "summary" : "Registra un/a funcionari/ària habilitat nou a RFHab",
+        "operationId" : "nouFuncionariHabilitat",
+        "parameters" : [ {
+          "name" : "language",
+          "in" : "query",
+          "description" : "Idioma en que s'han de retornar les dades(Només suportat 'ca' o 'es')",
+          "schema" : {
+            "type" : "string",
+            "default" : "ca"
+          },
+          "examples" : {
+            "Català" : {
+              "description" : "Català",
+              "value" : "ca"
+            },
+            "Castellano" : {
+              "description" : "Castellano",
+              "value" : "es"
+            }
+          }
+        }, {
+          "name" : "usuariId",
+          "in" : "query",
+          "description" : "Identificador de l'usuari que està realitzant el registre d'un nou FH",
+          "required" : true,
+          "schema" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
+          "example" : 1001
+        }, {
+          "name" : "donarDeAlta",
+          "in" : "query",
+          "description" : "Donar d'alta nou FH",
+          "schema" : {
+            "type" : "string",
+            "default" : "false"
+          },
+          "example" : false
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "Operació realitzada correctament.",
             "content" : {
               "application/json" : {
                 "schema" : {
